--- a/themes/forty/layouts/partials/calendar.html
+++ b/themes/forty/layouts/partials/calendar.html
@@ -59,4 +59,46 @@
                     </section>
             </section>
         </div>
+
+        <div class="inner">
+            <section>
+            <header class="major">
+                    <h2>{{ .Site.Params.Calendar.title}}</h2>
+                </header>
+           
+            <div >
+            <p>{{ .Site.Params.Calendar.subtitle }}</p>
+            </div>
+      
+        <!--
+            {{ range .Site.Data.calendar }}
+            <ul class="actions">
+                <li>{{ .day }}-{{ .month }}-{{ .year }}</li>
+                <li>{{ .event }} </li>
+            </ul>
+            {{ end }}
+-->
+            
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Fecha</th>
+                                <th>Descripción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                                {{ range .Site.Data.calendar }}
+                            <tr>
+                                <td>{{ .day }}-{{ .month }}-{{ .year }}</td>
+                                <td>{{ .event }} </td>
+                                
+                            </tr>
+                            {{ end }}
+
+                        </tbody>
+                    </table>
+               
+        </section>
+       
+    </div>
     </section>
