--- a/themes/forty/layouts/partials/nav.html
+++ b/themes/forty/layouts/partials/nav.html
@@ -12,7 +12,7 @@
     <nav id="menu">
         <ul class="links">
             {{ range $index, $element := $navigation.links }}
-                <li><a href="{{ $element.url | absURL}}index.html">{{ $element.name }}</a></li>
+                <li><a href="{{ $element.url | absURL}}/index.html">{{ $element.name }}</a></li>
             {{ end }}
             {{ range $index, $element := $navigation.contact }}
             <li><a href="{{ .Site.BaseURL }}/{{ $element.url }} ">{{ $element.name }}</a></li>
