--- a/themes/forty/static/css/main.css
+++ b/themes/forty/static/css/main.css
@@ -3455,7 +3455,7 @@
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		background-image: url("../img/banner.jpg");
+		/*background-image: url("../img/banner.jpg");*/
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
