--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -37,7 +37,7 @@
                         <span class="icon alt fa-whatsapp"></span>
                         {{ range $element := $contact.whatsapp }}
                         <h3><a href="https://wa.me/{{ $contact.general.whatsapp }}">{{ $element.title }}</a></h3>
-                        <h4><a href="https://wa.me/{{ $contact.general.whatsapp }}">{{ $element.text }}</a></h4>
+                       <!-- <h4><a href="https://wa.me/{{ $contact.general.whatsapp }}">{{ $element.text }}</a></h4>-->
                         {{ end }}
                     </div>
                 </section>
