--- a/themes/forty/static/css/main.css
+++ b/themes/forty/static/css/main.css
@@ -3461,7 +3461,7 @@
 		display: -ms-flex;
 		display: flex;
 		padding: 6em 0 2em 0 ;
-		background-attachment: fixed;
+		background-attachment: scroll;
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
