--- a/themes/forty/layouts/_default/list.html
+++ b/themes/forty/layouts/_default/list.html
@@ -42,7 +42,7 @@
                                 </header>
                                 <p>{{ .Description }}</p>
                                 <ul class="actions">
-                                    <li><a href="{{ .Permalink }}index.html" class="button">Learn more</a></li>
+                                    <li><a href="{{ .Permalink }}index.html" class="button">{{ .Params.buttontext }}</a></li>
                                 </ul>
                             </div>
                         </div>
