--- a/themes/forty/layouts/partials/header.html
+++ b/themes/forty/layouts/partials/header.html
@@ -30,4 +30,15 @@
 	<script src="js/ie/html5shiv.js"></script>
 	<script src="js/ie/html5shiv.jsrespond.min.js"></script>
 	{{ "<![endif]-->" | safeHTML }}
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145420159-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-145420159-1');
+	</script>
+
 </head>
