Fix contact mail

--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -3,7 +3,7 @@
     <section id="contact">
         <div class="inner">
             <section>
-                <form method="post" action="https://formspree.io/{{ .Site.Params.Contact.formEmail }}">
+                <form method="post" action="https://formspree.io/info@maquillajeasturias.com">
                     <div class="field half first">
                         <label for="name">Nombre</label>
                         <input type="text" name="name" id="name" />
