--- a/themes/forty/layouts/partials/header.html
+++ b/themes/forty/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <head>
+
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -40,5 +41,6 @@
 
 	gtag('config', 'UA-145420159-1');
 	</script>
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
