Add admin netlify CMS

--- a/themes/forty/layouts/partials/header.html
+++ b/themes/forty/layouts/partials/header.html
@@ -41,6 +41,7 @@
 
 	gtag('config', 'UA-145420159-1');
 	</script>
-	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+	<!-- Include the script that enables Netlify Identity on this page. -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
